--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,52 @@
-Flask
-flask_socketio
-python-dotenv
-joblib
-numpy
-requests
-feedparser
-beautifulsoup4
-assemblyai
-scikit-learn
-pandas
+annotated-types==0.7.0
+anyio==4.9.0
+assemblyai==0.37.0
+beautifulsoup4==4.13.3
+bidict==0.23.1
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+dnspython==2.7.0
+eventlet==0.39.1
+feedparser==6.0.11
+Flask==3.1.0
+Flask-SocketIO==5.5.1
+greenlet==3.1.1
+gunicorn==23.0.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.4.2
+MarkupSafe==3.0.2
+numpy==2.2.4
+packaging==24.2
+pandas==2.2.3
+pydantic==2.11.1
+pydantic_core==2.33.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-engineio==4.11.2
+python-socketio==5.12.1
+pytz==2025.2
+requests==2.32.3
+scikit-learn==1.6.1
+scipy==1.15.2
+sgmllib3k==1.0.0
+simple-websocket==1.1.0
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.6
+threadpoolctl==3.6.0
+typing-inspection==0.4.0
+typing_extensions==4.13.0
+tzdata==2025.2
+urllib3==2.3.0
+websockets==15.0.1
+Werkzeug==3.1.3
+wsproto==1.2.0
+yt-dlp==2025.3.31
